# grid-media-worker

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  README.md  comfybridge_gui_and_easy_install_937b6a10.plan.md  grid-media-manager.spec  manager_entry.py  package-lock.json  prepare_release.py  profile_pilot.py  profile_release.py  pyproject.toml  workflow_git_export.py
.github/workflows/: manager-build.yml  test.yml
bridge/: AGENTS.md  audio_runtime.py  bridge.py  cli.py  config.py  enrollment.py  identity.py  manager_cli.py  model_mapper.py  preflight.py  runtime_process.py  utils.py  workflow.py  ws_worker.py
bridge/profiles/: AGENTS.md  __init__.py  ace-step-v1.profile.json  advertisement.py  benchmark.py  canary.py  hardware.py  installer.py  profile.py  qualification.py  release.py  state.py  trusted-keys.json  worker-profile-v1.schema.json
bridge/web/: AGENTS.md  app.py  manager.py
bridge/web/static/: manager.css  manager.js
bridge/web/templates/: manager.html  manager_session_required.html
deploy/: AGENTS.md  README.md
deploy/systemd/: aipg-audio-worker@.service
tests/: AGENTS.md  conftest.py  test_audio_runtime.py  test_enrollment.py  test_hardware_profiles.py  test_manager_cli.py  test_manager_web.py  test_profile_benchmark.py  test_profile_canary.py  test_profile_installer.py  test_profile_release.py  test_profile_state.py  test_runtime_process.py  test_source_image.py  test_worker_identity.py  test_worker_profiles.py  test_ws_worker.py
tests/image_compare/: compare_metadata.py
workflows/: AGENTS.md  Flux.2-dev.json  LTX_Image_to_Video.json  README.md  flux.1-krea-dev.json  flux_kontext_dev_basic.json  wan2.2-t2v-14b.json  wan2.2-t2v-a14b-hqa.json  wan2.2-t2v-a14ba.json  wan2.2_ti2v_5B.json
(+1 files in other folders)
