[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-bridge"
version = "0.2.0"
description = "ComfyUI Bridge for AI Power Grid"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx",
  "aiohttp",
  "python-dotenv",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "jinja2>=3.1.0",
  "websockets>=11.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "Pillow",
]

[project.scripts]
comfy-bridge = "bridge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]

[tool.setuptools.package-data]
bridge = ["web/templates/**/*.html", "web/static/**/*", "certs/*.pem"]