[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-bridge"
version = "0.2.0"
description = "ComfyUI Bridge for AI Power Grid"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx",
  "aiohttp",
  "python-dotenv",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "jinja2>=3.1.0",
  "websockets>=11.0",
  "cryptography>=42.0.0",
  "jsonschema>=4.21.0",
  "eth-account>=0.13.7,<0.14",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "Pillow",
]
release = [
  "pyinstaller==6.21.0",
  "uv==0.11.28",
]

[project.scripts]
comfy-bridge = "bridge.cli:main"
grid-media-manager = "bridge.manager_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]

[tool.setuptools.package-data]
bridge = ["web/templates/**/*.html", "web/static/**/*", "certs/*.pem", "profiles/*.json"]
